--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'java'
 }
 
+apply plugin: 'checkstyle'
+
 group = 'az.pashabank.ls'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '1.8'
@@ -23,4 +25,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+}
+
+checkstyle {
+    toolVersion '8.14'
 }
